Added git support to plugin

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cordova-plugin-android-theme-detection",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Cordova plugin for detect dark mode on Android",
   "keywords": [
     "cordova",
@@ -11,5 +11,12 @@
     "android"
   ],
   "author": "Valerii Psol",
-  "license": "MIT"
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/arel0ve/cordova-plugin-android-theme-detection.git"
+  },
+  "bugs": {
+    "url": "https://github.com/arel0ve/cordova-plugin-android-theme-detection/issues"
+  }
 }
