Fixed java class name

--- a/plugin.xml
+++ b/plugin.xml
@@ -1,6 +1,6 @@
 <?xml version='1.0' encoding='utf-8'?>
 <plugin id="cordova-plugin-android-theme-detection"
-        version="1.0.3" xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android">
+        version="1.0.4" xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android">
     <name>AndroidThemeDetection</name>
     <author>Valerii Psol</author>
     <description>
@@ -24,6 +24,6 @@
                 <param name="android-package" value="ua.valeriipsol.cordova.plugin.androidthemedetection"/>
             </feature>
         </config-file>
-        <source-file src="src/theme-detection.java" target-dir="src/ua/valeriipsol/cordova/plugin" />
+        <source-file src="src/ThemeDetection.java" target-dir="src/ua/valeriipsol/cordova/plugin" />
     </platform>
 </plugin>
